# zelscript

./: README.md  pyproject.toml
src/zelscript/: __init__.py  cli.py
src/zelscript/commands/: choice.py  convert_to_png.py  img_resize.py  rename_sequential.py  sleep_timer.py  timer.py  welcome.py
